--- a/src/app.css
+++ b/src/app.css
@@ -2,8 +2,6 @@
   font-family: 'New Gothic', sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
 
@@ -16,6 +14,7 @@
 body {
 margin: 0;
 letter-spacing: 1.5px;
+color: #242424;
 }
 
 #app {
